# OMNI-BOT-MCP

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
mcp_simple_slackbot/: .env.example  __init__.py  llama_index_agent.py  main.py  manifest.yaml  requirements.txt  servers_config.json  system_prompt.txt
